// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest can mount 1`] = `

<div id="autosuggest"
     data-server-rendered="true"
>
  <input name="q"
         type="text"
         maxlength="256"
         autocomplete="off"
         aria-autosuggest="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         id="autosuggest__input"
         initialvalue
         onclick="function onClick() {}"
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         value
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div role="listbox"
         aria-labelledby="autosuggest"
         class="autosuggest__results"
    >
      <!---->
    </div>
  </div>
</div>

`;

exports[`Autosuggest can render suggestions 1`] = `

<div id="autosuggest"
     data-server-rendered="true"
>
  <input name="q"
         type="text"
         maxlength="256"
         autocomplete="off"
         aria-autosuggest="list"
         aria-owns="autosuggest__results"
         aria-activedescendant="autosuggest__results--item-0"
         aria-haspopup="true"
         id="autosuggest__input"
         initialvalue
         onclick="function onClick() {}"
         oninputchange="function onInputChange() {}"
         placeholder="Type 'G'"
         value="clifford kits"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <div role="listbox"
         aria-labelledby="autosuggest"
         class="autosuggest__results"
    >
      <ul role="listbox"
          aria-labelledby="autosuggest"
      >
        <!---->
        <li role="option"
            data-suggestion-index="0"
            data-section-name="default"
            id="autosuggest__results_item-0"
            class="autosuggest__results_item autosuggest__results_item"
        >
          clifford kits
        </li>
        <li role="option"
            data-suggestion-index="1"
            data-section-name="default"
            id="autosuggest__results_item-1"
            class="autosuggest__results_item autosuggest__results_item"
        >
          friendly chemistry
        </li>
        <li role="option"
            data-suggestion-index="2"
            data-section-name="default"
            id="autosuggest__results_item-2"
            class="autosuggest__results_item autosuggest__results_item"
        >
          phonics
        </li>
        <li role="option"
            data-suggestion-index="3"
            data-section-name="default"
            id="autosuggest__results_item-3"
            class="autosuggest__results_item autosuggest__results_item"
        >
          life of fred
        </li>
        <li role="option"
            data-suggestion-index="4"
            data-section-name="default"
            id="autosuggest__results_item-4"
            class="autosuggest__results_item autosuggest__results_item"
        >
          life of fred math
        </li>
      </ul>
    </div>
  </div>
</div>

`;
